Updated with pizzagate consps

--- a/Conspiracy_Analysis_Election.ipynb
+++ b/Conspiracy_Analysis_Election.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "Exploration of Election Twitter dataset"
    ]
   },
@@ -23,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "homepath = '../../'"
+    "homepath = '../../'\n",
+    "election_path = homepath + 'election_data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -95,7 +99,7 @@
        "1886"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +107,7 @@
    "source": [
     "# List the csv files in the directories\n",
     "csv_files = []\n",
-    "filepath = homepath + 'election_data/election_csvs/'\n",
+    "filepath = election_path + 'election_csvs/'\n",
     "files = []\n",
     "files = [f for f in os.listdir(filepath) if not f.startswith('.')]\n",
     "for month in months:\n",
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -207,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51748079fa1143adb2ca0b41722ad4b0",
+       "model_id": "ece579a1443f43bcaecdaeb9e847464e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +235,7 @@
        "(36067, 21)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +410,7 @@
        "\" \\nTweet Columns\\n       'tweetid', 'userid', 'screen_name', 'date', 'lang', 'location',\\n       'place_id', 'place_url', 'place_type', 'place_name', 'place_full_name',\\n       'place_country_code', 'place_country', 'place_bounding_box', 'text',\\n       'extended', 'coord', 'reply_userid', 'reply_screen', 'reply_statusid',\\n       'tweet_type', 'friends_count', 'listed_count', 'followers_count',\\n       'favourites_count', 'statuses_count', 'verified', 'hashtag',\\n       'urls_list', 'profile_pic_url', 'profile_banner_url', 'display_name',\\n       'date_first_tweet', 'account_creation_date', 'rt_urls_list',\\n       'mentionid', 'mentionsn', 'rt_screen', 'rt_userid', 'rt_text',\\n       'rt_hashtag', 'rt_qtd_count', 'rt_rt_count', 'rt_reply_count',\\n       'rt_fav_count', 'rt_tweetid', 'qtd_screen', 'qtd_userid', 'qtd_text',\\n       'qtd_hashtag', 'qtd_qtd_count', 'qtd_rt_count', 'qtd_reply_count',\\n       'qtd_fav_count', 'qtd_tweetid', 'qtd_urls_list'                         \\n\""
       ]
      },
-     "execution_count": 96,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,12 +453,16 @@
     "                  'qarmy'\n",
     "                 ]\n",
     "\n",
+    "\n",
+    "pizza_keywords = ['pizzagate'\n",
+    "                 ]\n",
+    "\n",
     "all_keywords = list(set(keywords+general_keywords+qanon_keywords))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -519,7 +527,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-ae3d9eaef748>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Preprocessed csvs with only conspiracy and url tweets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-25-ae3d9eaef748>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Preprocessed csvs with only conspiracy and url tweets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/ls/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    684\u001b[0m     )\n\u001b[1;32m    685\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 686\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    687\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    688\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/ls/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    450\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    451\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 452\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/ls/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    934\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    935\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 936\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    937\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    938\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -538,21 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {
     "hidden": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-633337079cd0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(35308, 21)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -760,7 +767,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edd3a0129d304b67b2e344d417b4dd70",
+       "model_id": "15d30fb9abf44bf996fccecfd3f9c950",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,11 +791,13 @@
     "tot_df = pd.DataFrame()\n",
     "df = pd.DataFrame()\n",
     "qanon_df_h = pd.DataFrame()\n",
+    "pizza_df_h = pd.DataFrame()\n",
     "\n",
     "clouds=False\n",
     "\n",
     "conspiracy_users=set()\n",
     "qanon_users=set()\n",
+    "pizza_users=set()\n",
     "\n",
     "url_dict = {}\n",
     "\n",
@@ -802,12 +811,15 @@
     "\n",
     "    conspiracy_users_h, conspiracy_dict_h, consps_df_h = get_hashtags_tweets(tweet_df,keywords,cloud=clouds)\n",
     "    qanon_users_h, qanon_dict_h, qanon_df__h = get_hashtags_tweets(tweet_df,qanon_keywords,cloud=clouds)\n",
+    "    pizza_users_h, pizza_dict_h, pizza_df__h = get_hashtags_tweets(tweet_df,pizza_keywords,cloud=clouds)\n",
     "    \n",
     "    tot_df = tot_df.append(tweet_df)\n",
     "    qanon_df_h = qanon_df_h.append(qanon_df__h)\n",
+    "    pizza_df_h = pizza_df_h.append(pizza_df__h)\n",
     "    \n",
     "    conspiracy_users.update(conspiracy_users_h)\n",
     "    qanon_users.update(qanon_users_h)\n",
+    "    pizza_users.update(pizza_users_h)\n",
     "    \n",
     "    tweet_df = tweet_df[tweet_df.urls_list!='[]']\n",
     "\n",
@@ -821,11 +833,12 @@
     "\n",
     "    df = df.append(consps_df_h)\n",
     "    df = df.append(qanon_df_h)\n",
+    "    df = df.append(pizza_df_h)\n",
     "\n",
     "    df = df.append(news_url_df)\n",
     "\n",
     "    if i % 100 == 0:\n",
-    "        df.to_csv('election_conspiracies_parsed_1.csv', index=False)\n",
+    "        df.to_csv(election_path + 'election_conspiracies_parsed_1.csv', index=False)\n",
     "    \n",
     "    del tweet_df, news_url_df\n",
     "    gc.collect()"
@@ -837,7 +850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(qanon_users)"
+    "df.to_csv(election_path + 'election_conspiracies_parsed_1.csv', index=False)"
    ]
   },
   {
