removed api keys

--- a/Botometer queries and results.ipynb
+++ b/Botometer queries and results.ipynb
@@ -309,14 +309,15 @@
    "source": [
     "import botometer\n",
     "\n",
-    "rapidapi_key = \"6ac8fe69aamshcc30411e7824b49p12a1cajsnc2267278951c\" # now it's called rapidapi key\n",
     "\n",
+    "rapidapi_key = os.environ.get('rapidapi_key')\n",
     "twitter_app_auth = {\n",
-    "    'consumer_key':'MmWATyoHu9GdouoNuZNuzzWbi',\n",
-    "    'consumer_secret': 'iYZRcgnKzBZ5GlzBe4olGXBtBT8t0p6K99JeUIeKvPIqBLQk9l',\n",
-    "    'access_token': '1239432784319406080-vuGIvDzEWj6j6EL57427FHnDTipljz',\n",
-    "    'access_token_secret': 'ISafXRzVjGSQc46mjNtMgMXZl3ry9wDmMHiHRVzsMlX60',\n",
-    "  }\n",
+    "    'consumer_key':        os.environ.get('consumer_key'),\n",
+    "    'consumer_secret':     os.environ.get('consumer_secret'),\n",
+    "    'access_token_key':    os.environ.get('access_token_key'),\n",
+    "    'access_token_secret': os.environ.get('access_token_secret')\n",
+    "}\n",
+    "\n",
     "\n",
     "botometer_api_url = 'https://botometer-pro.p.rapidapi.com'\n",
     "bom = botometer.Botometer(botometer_api_url=botometer_api_url,\n",
