--- a/Query quoted.ipynb
+++ b/Query quoted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,21 +10,22 @@
     "import json\n",
     "import tweepy\n",
     "import pickle\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Add your credentials here\n",
     "twitter_keys = {\n",
-    "        'consumer_key':        'DPIuUoHQsmaeK7UCyQZPxk1pD',\n",
-    "        'consumer_secret':     'SLDDw1VCdbF1ZpWl8xnNRekgw2Occd7ltVPuxo4tfyTZRPd8aq',\n",
-    "        'access_token_key':    '1239432784319406080-utlL3ABCF0F7TK1Kcg2QBMHy2FfvTZ',\n",
-    "        'access_token_secret': 'rHxi7iYnyDOeK9eE9t7BNi7KJTstAGaFlOINSx3qIpTFB'\n",
+    "        'consumer_key':        os.environ.get('consumer_key'),\n",
+    "        'consumer_secret':     os.environ.get('consumer_secret'),\n",
+    "        'access_token_key':    os.environ.get('access_token_key'),\n",
+    "        'access_token_secret': os.environ.get('access_token_secret')\n",
     "    }\n",
     "\n",
     "#Setup access to API\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
